specs/018-class-inheritance-members/examples/invalid/private-access.ts
class Account {
  private balance: int;
  constructor(start: int) {
    this.balance = start;
  }
}

let a = new Account(100);
console.log(a.balance);
